Fix button from jumping vertically on button click

--- a/web/main/colors.css
+++ b/web/main/colors.css
@@ -32,7 +32,7 @@
     --dangerous-card-hover-color: color-mix(in oklab, var(--red-100), var(--sand-100));
     --dangerous-text-color: var(--red-700);
     --button-shadow:
-      inset 0 0 0 1px oklch(0% 0 0 / 15%),
+      0 0 0 1px oklch(0% 0 0 / 15%),
       inset 0 -5px 5px oklch(from var(--shadow-color) l c h / 8%);
     --button-active-shadow:
       inset 0 1px 2px oklch(from var(--shadow-color) l c h / 15%),
